Initial commit - GeneratorEntryView